# Django_Blog_Project

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
my_blog/: admin.py  authentication.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
my_blog/migrations/: 0001_initial.py  0002_product.py
my_project_drf/: asgi.py  settings.py  urls.py  wsgi.py
